[package]
name = "toolup"
version = "0.1.0"
authors = ["Ethan Hall <ethan@ehdev.io>"]
edition = "2018"

[dependencies]
toml = "0.4"
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"
json = "*"
log = "*"
clap = { version = "2.32", features = ["yaml"] }
directories = "1.0"
toolup-macros = { path = "../toolup-macros"}
kopy-common-lib = { git = "https://github.com/ethankhall/rust-shared.git", rev = "84a38d080b5a066c7443e6a46e043708d2a53f39" }
reqwest = { version = "0.9.9", features = ["rustls-tls"] }